stylesheet.less
/* ... */
h3 {
    font-family: @font-swatch3-font-family;
    font-size: @font-swatch3-font-size;
    font-weight: @font-swatch3-font-weight;
    color: @font-swatch3-color;
    line-height: @font-swatch3-line-height;
    letter-spacing: @font-swatch3-letter-spacing;
}

h4 {
    font-family: @font-swatch4-font-family;
    font-size: @font-swatch4-font-size;
    font-weight: @font-swatch4-font-weight;
    line-height: @font-swatch4-line-height;
    color: @font-swatch4-color;
    letter-spacing: @font-swatch4-letter-spacing;
}

p {
    font-family: @font-swatch5-font-family;
    font-size: @font-swatch5-font-size;
    font-weight: @font-swatch5-font-weight;
    line-height: @font-swatch5-line-height;
    color: @font-swatch5-color;
    letter-spacing: @font-swatch5-letter-spacing;
}

ul,
ol,
li {
    font-family: @font-swatch5-font-family;
    font-size: @font-swatch5-font-size;
    font-weight: @font-swatch5-font-weight;
    line-height: @font-swatch5-line-height;
    color: @font-swatch5-color;
    letter-spacing: @font-swatch5-letter-spacing;
}

blockquote {
    padding: 20px;
    margin:20px;
    quotes: "\201C""\201D""\2018""\2019";
    font-family:@font-swatch3-font-family;
    font-size:@font-swatch3-font-size;
    font-weight:@font-swatch3-font-weight;
    line-height:@font-swatch3-line-height;
    color:@color-swatch6;
}

blockquote:before {
    font-family: Arial, serif;
    color: @color-swatch4;
    content: open-quote;
    font-size: 2em;
    line-height: .1em;
    margin-right: .1em;
    vertical-align: -.4em;
}

blockquote p {
    display: inline;
    font-family:@font-swatch5-font-family;
    font-size:@font-swatch5-font-size;
    font-weight:@font-swatch5-font-weight;
    line-height:@font-swatch5-line-height;
    color:@color-swatch4;
}

ul, ol, li {
  font-family:@font-swatch5-font-family;
  font-size:@font-swatch5-font-size;
  font-weight: @font-swatch5-font-weight;
  line-height:@font-swatch5-line-height;
  color:@font-swatch5-color;
  letter-spacing: @font-swatch5-letter-spacing;
}

.bk-content-text ul, .bk-content-text ol, .bk-content-text li {
  padding-left: 1.4em; 
  text-indent: -1.4em;
}

form, .widget.blogsearch {
	clear: both;
}

/* ===============================
   CUSTOM CSS
   =============================== */

.main {
    border-bottom: 1px solid darken(@color-swatch2,10%);
    padding-bottom: 40px;
}

body.edit .widget.navigation, body.edit .widget.extendednavigation {
    overflow: visible;
}



/* ===============================
   HEADER
   =============================== */

.bk-header {
    margin: 40px 0;
    background-color: transparent;
    border-bottom: 1px solid darken(@color-swatch2,10%);
    padding-bottom: 33px;
}

.companyheader {
    display: block;
    float: left;
    padding: 0;
}

/* COMPANY NAME */

.widget.companyname {
  display: block;
  float: left;
  margin: 5px 0 0 5px;
}

.companyname a:hover {
  text-decoration: none;
}

.widget.companyname a {
  font-family:@font-swatch10-font-family;
  font-weight: @font-swatch10-font-weight;
  color:@font-swatch10-color;
  line-height:@font-swatch10-line-height;
  letter-spacing: @font-swatch10-letter-spacing;
  font-size: @font-swatch10-font-size;
}

/* LOGO */

.widget.logo {
  display: block;
  float: left;
}

/* ===============================
   FOOTER
   =============================== */

.bk-footer {
    padding: 1em 0;
    color: @color-swatch1;
}

.bk-footer h1,
.bk-footer h2,
.bk-footer h3,
.bk-footer h4 {
    padding-bottom: 20px;
}

/* ===============================
   STANDARD NAVIGATION
   =============================== */

.widget.navigation {

}

.widget.navigation ul {
    padding: 0;
    margin: 30px 0;
}

.widget.navigation ul.align-center li {
    text-align: center
}

.widget.navigation ul.align-left li {
    text-align: left
}

.widget.navigation ul.align-right li {
    text-align: right
}

.widget.navigation ul li {
    float: left;
    display: block;
    padding-right: 40px;
}

.widget.navigation ul li a {
    display: block;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
}

.widget.navigation ul li a:hover {
    text-decoration: none;
    color: @color-swatch3;
}

/* ===============================
   EXTENDED NAVIGATION
   =============================== */

.widget.extendednavigation {
    float: right;
    position: relative;
    max-width: 691px;
    margin: 12px 0;
}

.widget.extendednavigation a.pull {
    top:-58px;
}

.widget.extendednavigation ul {
    float: left;
    margin: 0;
    padding: 0;
}

/* ALIGNMENTS */

.widget.extendednavigation ul.align-center li,
.widget.extendednavigation ul.align-center li:hover ul li {
    text-align: center
}

.widget.extendednavigation ul.align-left li,
.widget.extendednavigation ul.align-left li:hover ul li {
    text-align: left
}

.widget.extendednavigation ul.align-right li,
.widget.extendednavigation ul.align-right li:hover ul li {
    text-align: right
}

.widget.extendednavigation ul li {
    float: left;
    display: block;
}

.widget.extendednavigation ul li a {
    display: block;
    padding: 4px 20px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
}

.widget.extendednavigation ul li.folder .text {
    display: block;
    padding: 4px 30px 4px 20px;
    font-family: @font-swatch6-font-family;
    font-size: @font-swatch6-font-size;
    font-weight: @font-swatch6-font-weight;
    color: @font-swatch6-color;
    line-height: @font-swatch6-line-height;
    letter-spacing: @font-swatch6-letter-spacing;
  }
/* ... */

